Estrutura HTML criada

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap" rel="stylesheet">
@@ -13,6 +16,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>ParKing</title>
 </head>
+
 <body>
     <section>
         <button class="empresa">
@@ -26,26 +30,154 @@
         <button>FALAR COM CONSULTOR</button>
     </section>
     <section>
-
+        <img src="./img/Frame 2.png" alt="estacionamentos">
+        <h1>ASSUMA O TRONO DA</h1>
+        <h1>GESTÃO DO SEU</h1>
+        <h1>ESTACIONAMENTO</h1>
+        <p>Controle financeiro, antifraude e automação total para grandes <br>
+            operações. O parKing Station é o fim das planilhas e o início do seu <br>
+            império.</p>
+        <div class="butões">
+            <button>Agendar demonstração real</button>
+            <button>Ver Funcionalidades</button>
+        </div>
+        <div>
+            <div>
+                <h2>Veja o Poder do parKing em <br>Ação</h2>
+                <p>Grandes donos de estacionamento não têm tempo para interfaces <br>
+                    confusas. Nosso Dashboard entrega o RAIO-X do seu negócio em <br>
+                    segundos.</p>
+                <span>
+                    <img src="./img/Done.svg" alt="Feito">
+                    Monitoramento de Vagas em Tempo Real
+                </span><br>
+                <span>
+                    <img src="./img/Done.svg" alt="Feito">
+                    Relatórios Financeiros
+                </span>
+            </div>
+            <img src="" alt="tela do app">
+        </div>
     </section>
     <section>
-
+        <h2>Quem já governa com o parKing Station</h2>
+        <div>
+            <img src="./img/uber-svgrepo-com 1.svg" alt="uber">
+            <img src="./img/airbnb 1.svg" alt="airbnb">
+            <img src="./img/Apple Inc.svg" alt="apple">
+            <img src="./img/Google.svg" alt="google">
+            <img src="./img/Microsoft.svg" alt="microsoft">
+        </div>
     </section>
     <section>
-
+        <h2>Feito para Operações de Alto Calibre.</h2>
+        <h2>Não atendemos pequenos. Nosso foco é escala, segurança e volume.</h2>
+        <div>
+            <div>
+                <img src="./img/Shopping Cart.svg" alt="carrinho de compras">
+            </div>
+            <h2>Shoppings & Varejo</h2>
+            <p>Gestão complexa de mensalistas, credenciados <br>e fluxo rotativo intenso sem filas na saída.</p>
+        </div>
+        <div>
+            <div>
+                <img src="./img/Company.svg" alt="Redes de estacionamentos">
+            </div>
+            <h2>Redes de estacionamentos</h2>
+            <p>Centralize 10, 50 ou 100 unidades em um único <br>painel. Controle total do seu patrimônio.</p>
+        </div>
+        <div>
+            <div>
+                <img src="./img/Airplane Take Off.svg" alt="Aeroportos & Eventos">
+            </div>
+            <h2>Aeroportos & Eventos</h2>
+            <p>Máxima velocidade na operação e sistemas <br>redundantes que nunca deixam o cliente <br>travado. </p>
+        </div>
     </section>
     <section>
-
-    </section>
-    <section>
-
+        <div class="toggle-wrapper">
+            <span class="toggle-option" id="mensalText">MENSAL</span>
+            <label class="switch">
+                <input type="checkbox" id="togglePrice">
+                <span class="slider"></span>
+            </label>
+            <span class="toggle-option" id="anualText">ANUAL</span>
+            <div class="porcento">
+                <span>-20%</span>
+            </div>
+        </div>
+        <div class="plan-card">
+            <h3>DUQUE</h3>
+            <p class="price" id="duquePrice">R$299</p>
+            <span>/mês</span>
+            <ul class="beneficios"> 
+                <li>
+                    <img src="./img/Done.svg" alt="Feito">
+                    Até 200 Vagas
+                </li>
+                <li>
+                    <img src="./img/Done.svg" alt="Feito">
+                    Controle de Entrada/Saída</li>
+                <li>
+                    <img src="./img/Done.svg" alt="Feito">
+                    Relatório Básico
+                </li>
+            </ul>
+            <button>COMEÇAR AGORA</button>
+        </div>
+        <div class="plan-card">
+            <div class="recomendado">
+                <h5>RECOMENDADO</h5>
+            </div>
+            <h3>REI(KING)</h3>
+            <p class="price" id="kingPrice">R$599</p>
+            <span>/mês</span>
+            <ul class="beneficios">
+                <li>
+                    <img src="./img/Done.svg" alt="Feito">
+                    Vagas ilimitadas
+                </li>
+                <li>
+                    <img src="./img/Done.svg" alt="Feito">
+                    Sistema Anti-Fraude
+                </li>
+                <li>
+                    <img src="./img/Done.svg" alt="Feito">
+                    Integração com Cancelas
+                </li>
+                <li>
+                    <img src="./img/Done.svg" alt="Feito">
+                    App do gesto
+                </li>
+            </ul>
+            <button>QUERO ESTE</button>
+        </div>
+        <div class="plan-card">
+            <h3>IMPERADOR</h3>
+            <h2>Sob consulta</h2>
+            <ul class="beneficios">
+                <li>
+                    <img src="./img/Done.svg" alt="Feito">
+                    Multi-Unidades (Redes)
+                </li>
+                <li>
+                    <img src="./img/Done.svg" alt="Feito">
+                    Api aberta
+                </li>
+                <li>
+                    <img src="./img/Done.svg" alt="Feito">
+                    Vagas ilimitadas
+                </li>
+            </ul>
+            <button>Falar com consultor</button>
+        </div>
     </section>
     <section>
         <div>
-           <h1>Seus Dados Protegidos como em um <br>Cofre</h1>
+            <h1>Seus Dados Protegidos como em um <br>Cofre</h1>
             <p>Sabemos que os dados de faturamento são o coração do <br>
-            negócio. Utilizamos criptografia de ponta a ponta e backups <br>
-            diários automáticos.</p>
+                negócio. Utilizamos criptografia de ponta a ponta e backups <br>
+                diários automáticos.</p>
         </div>
         <div>
             <img src="./img/Lock.svg" alt="cadeado">
@@ -57,9 +189,11 @@
             <h2>Fale com um Especialista</h2>
             <h6>Preencha abaixo. Entraremos em contato em até 2 horas.</h6>
             <form action="">
-                <input type="text" id="name" name="name" value="Seu nome">
-                <input type="text" id="empresa" name="empresa" value="Nome da empresa">
-            </form>
+                <input type="text" id="campoName" name="name" value="Seu nome">
+                <button class="botao-limpar" id="btnLimpar"><img src="./img/Content.svg" alt="x"></button> 
+                <input type="text" id="campoEmpresa" name="empresa" value="Nome da empresa">
+                <button class="botao-limpar" id="btnLimpar"><img src="./img/Content.svg" alt="x"></button>
+            </form>          
             <form action="">
                 <input type="text" id="email" name="email" value="Seu E-mail corporativo">
             </form>
@@ -97,7 +231,7 @@
                 <h2>ParKing Station</h2>
             </div>
             <span>
-                © 2025 parKing Station Station Systems. 
+                © 2025 parKing Station Station Systems. <br>
                 Todos os direitos reservados.
             </span>
         </div>
@@ -105,4 +239,5 @@
 
     <script src="./script/script.js"></script>
 </body>
+
 </html>
