Arrumei pequenos detalhes mas agora está 100%, finalizado, só faltando a parte de responsividade

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -207,17 +207,14 @@
                     <input type="text" id="nome" placeholder="Seu nome">
                     <img src="./img/Content.svg" class="clear-btn" data-input="nome">
                 </div>
-
                 <div class="input-box">
                     <input type="text" id="empresa" placeholder="Nome da empresa">
                     <img src="./img/Content.svg" class="clear-btn" data-input="empresa">
                 </div>
-
                 <div class="input-box full">
-                    <input type="text" id="outro" placeholder="Seu nome">
+                    <input type="text" id="outro" placeholder="Qual seu e-mail comercial ?">
                     <img src="./img/Content.svg" class="clear-btn" data-input="outro">
                 </div>
-
                 <select>
                     <option>Quantas vagas você gerencia?</option>
                     <option value="" disabled selected>Quantas vagas você gerencia?</option>
