Alterando detalhes semanticos

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -29,7 +29,7 @@
             <a href="#demo">DEMO</a>
             <a href="#clientes">CLIENTES</a>
             <a href="#planos">PLANOS</a>
-            <a href="#contato" class="contaquitar">FALAR COM CONSULTOR</a>
+            <a href="#contato" class="contactar">FALAR COM CONSULTOR</a>
         </nav>
     </section>
     <!-- Página principal -->
