Adiciona responsividade para tablet: inclui novo conteúdo no header, implementa menu hambúrguer e ajusta layout para dispositivos tablet.

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -31,10 +31,38 @@
             <a href="#planos">PLANOS</a>
             <a href="#contato" class="contactar">FALAR COM CONSULTOR</a>
         </nav>
+        <button id="menuButton">
+            <img src="./img/menu hamburgue.svg" alt="menu hamburgue">
+        </button>
+        <div id="menu" class="menuLateral">
+            <ul>
+                <li><a href="#home">
+                    Home
+                    <img src="./img/seta.png" alt="seta">
+                </a></li>
+                <li><a href="#demo">
+                    Demo
+                    <img src="./img/seta.png" alt="seta">
+                </a></li>
+                <li><a href="#clientes">
+                    Clientes
+                    <img src="./img/seta.png" alt="seta">
+                </a></li>
+                <li><a href="#planos">
+                    Planos
+                    <img src="./img/seta.png" alt="seta">
+                </a></li>
+                <li><a href="#contato">
+                    Consultoria
+                    <img src="./img/seta.png" alt="seta">
+                </a></li>
+            </ul>
+        </div>
     </section>
     <!-- Página principal -->
     <section class="principal" id="home">
         <img src="./img/Frame 2.png" alt="fundo" class="fundo">
+        <div class="headline">SOFTWARE DE ELITE PARA GESTORES</div>
         <h1 class="branco">ASSUMA O TRONO DA</h1>
         <h1 class="laranja">GESTÃO DO SEU</h1>
         <h1>ESTACIONAMENTO</h1>
