Realização de teste de algumas funcionalidades da responsividade para TABLET

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -35,28 +35,26 @@
             <img src="./img/menu hamburgue.svg" alt="menu hamburgue">
         </button>
         <div id="menu" class="menuLateral">
-            <ul>
-                <li><a href="#home">
+                <a href="#home">
                     Home
                     <img src="./img/seta.png" alt="seta">
-                </a></li>
-                <li><a href="#demo">
+                </a>
+                <a href="#demo">
                     Demo
                     <img src="./img/seta.png" alt="seta">
-                </a></li>
-                <li><a href="#clientes">
+                </a>
+                <a href="#clientes">
                     Clientes
                     <img src="./img/seta.png" alt="seta">
-                </a></li>
-                <li><a href="#planos">
+                </a>
+                <a href="#planos">
                     Planos
                     <img src="./img/seta.png" alt="seta">
-                </a></li>
-                <li><a href="#contato">
+                </a>
+                <a href="#contato" class="buttonOrange">
                     Consultoria
                     <img src="./img/seta.png" alt="seta">
-                </a></li>
-            </ul>
+                </a>
         </div>
     </section>
     <!-- Página principal -->
