--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -68,7 +68,7 @@
             operações. O parKing Station é o fim das planilhas e o início do seu <br>
             império.</p>
         <div class="button">
-            <button class="botão1">Agendar demonstração real</button>
+            <a class="botão1" href="#contato">Agendar demonstração real</a>
             <button class="botão2">Ver Funcionalidades</button>
         </div>
         <div class="container">
