Adicionada imagem oficial do software e ajustes de design, modificados detalhes de design para alinhar com o projeto original.

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -162,7 +162,7 @@
                 </ul>
                 <button class="aperte">COMEÇAR AGORA</button>
             </div>
-            <div class="plan-card">
+            <div class="plan-card" id="#recomendado">
                 <div class="recomendado">
                     <h5>RECOMENDADO</h5>
                 </div>
