Parte de parcerias alterada para ficar mais fiel ao design

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -98,8 +98,8 @@
                 <img src="./img/uber-svgrepo-com 1.svg" alt="uber" width="X" height="Y">
                 <img src="./img/airbnb 1.svg" alt="airbnb" width="X" height="Y">
                 <img src="./img/Apple Inc.svg" alt="apple" width="X" height="Y">
-                <img src="./img/Google.svg" alt="google" width="X" height="Y">
-                <img src="./img/Microsoft.svg" alt="microsoft" width="X" height="Y">
+                <img src="./img/Google.svg" alt="google" width="X" height="Y" class="icontoggle">
+                <img src="./img/Microsoft.svg" alt="microsoft" width="X" height="Y" class="icontoggle">
             </div>
         </section>
         <section class="operações" id="demo">
